crates/top/re_viewer/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.archetypes.Scalars.snap
---
source: crates/top/re_viewer/tests/all_component_fallbacks.rs
expression: arch_display
---
scalars: [0.0]
