crates/top/re_viewer/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.archetypes.SeriesLines.snap
---
source: crates/top/re_viewer/tests/all_component_fallbacks.rs
expression: arch_display
---
colors: [3161148927]
widths: [0.75]
names: [<name>]
visible_series: [true]
aggregation_policy: [5]
interpolation_mode: [1]
