crates/top/re_viewer/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.archetypes.SeriesPoints.snap
---
source: crates/top/re_viewer/tests/all_component_fallbacks.rs
expression: arch_display
---
colors: [3161148927]
markers: [1]
names: [<name>]
visible_series: [true]
marker_sizes: [3.0]
